[package]
name = "cijail"
version = "0.6.9"
edition = "2021"
publish = false

[dependencies]
base64 = { version = "0.22.0", features = ["std"], default-features = false }
bincode = { version = "2.0.0-rc.3", features = ["std", "derive"], default-features = false }
caps = { version = "0.5.5", features = [], default-features = false }
chrono = { version = "0.4.38", features = ["alloc", "clock"], default-features = false }
clap = { version = "4.5.4", features = ["std", "derive", "help", "usage"], default-features = false }
http = { version = "1.1.0", features = ["std"], default-features = false }
http-mitm-proxy = { version = "0.6.0", features = [], default-features = false }
hyper = { version = "1.3.1", features = [], default-features = false }
libc = { version = "0.2.153", features = ["std"], default-features = false }
libseccomp = { version = "0.3.0", features = [], default-features = false }
log = { version = "0.4.21", features = [], default-features = false }
nix = { version = "0.28.0", features = ["uio", "process", "fs", "socket", "net"], default-features = false }
passfd = { version = "0.1.6", features = [], default-features = false }
punycode = { version = "0.4.1", features = [], default-features = false }
rcgen = { version = "0.13.1", features = [], default-features = true }
regex = { version = "1.10.4", features = [], default-features = true }
rlimit = { version = "0.10.1", features = [], default-features = false }
socketpair = { version = "0.19.5", features = [], default-features = false }
tempfile = { version = "3.10.1", features = [], default-features = false }
thiserror = { version = "1.0.58", features = [], default-features = false }
tokio = { version = "1.37.0", features = ["full"], default-features = false }
tokio-native-tls = { version = "0.3.1", features = [], default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
test_bin = "0.4.0"

[build-dependencies]
bindgen = { version = "0.69.4", features = [], default-features = false }
